    - Merge fixing-a-bug and fixing-a-bug-example, it's simpler this way.

  [ Dmitry Shachnev ]
  * Temporary downgrade debhelper compatibility level to 9, to allow
    building on Ubuntu 14.04.
  * Build-depend on python3-stemmer to fix build with the latest Sphinx.
  * Use HTTPS links in debian/copyright.
  * Update Maintainer field to ubuntu-dev-team@alioth-lists.debian.org.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 03 Sep 2017 11:19:47 -0500

ubuntu-packaging-guide (0.3.9) unstable; urgency=medium

  * Build-depend on latexmk to fix build with Sphinx 1.6.
  * Bump Standards-Version to 4.0.0, no changes needed.
  * Bump debhelper compatibility level to 10.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 15 Aug 2017 20:03:36 +0300

ubuntu-packaging-guide (0.3.8) unstable; urgency=medium

  * fixing-ftbfs: Remove outdated section about arm64 (LP: #1485311).
  * auto-pkg-test: Update link to autopkgtest results (LP: #1489782).
  * auto-pkg-test: Stop mentioning XS-Testsuite header, it no longer
    needs to be added manually.
  * Build-depend on texlive-generic-extra to fix FTBFS with Sphinx 1.4.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 04 Jul 2016 13:02:46 +0300

ubuntu-packaging-guide (0.3.7) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * packaging-new-software: Add bzr-builddeb to the list of required
    packages (LP: #1385567).
  * Add myself to Uploaders.
  * Fix BSD license in debian/copyright.

  [ Walter Lapchynski ]
  * fixing-a-bug-example: Fix bad grammar in section 5.7 (LP: #1432970).

  [ Daniel Holbach ]
  * add Ukrainian language.
  * Update Standards-Version to 3.9.6, no changes required.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 17 Jun 2015 10:35:34 +0300

ubuntu-packaging-guide (0.3.6) unstable; urgency=medium

  [ Andrew Starr-Bochicchio ]
  * Upload to unstable.

  [ Dmitry Shachnev ]
  * Fix a typo and regenerate the .pot file (LP: #1309861).
  * Use anonymous links where possible to make translation easier.